# learnc

./: CMakeLists.txt  main.c  note.txt  vidu9.2
chap01/: demo_datatype.cpp  demo_datatype.h  demo_sizeof.cpp  demo_sizeof.h  ex01.cpp  ex01.h  ex02.cpp  ex02.h  ex03.cpp  ex03.h  salary.cpp  salary.h  tinhtuoi.cpp  tinhtuoi.h
exam/: bai1.c  bai2.c
lab04/: bai1.c  bai2.c  bai3.c  bai4.c  bai5.c  bai6.c  bai7.c
lab05/: bai1.c  bai2.c  bai3.c  bai4.c  bai5.c  bai6-chua.c  bai6.c
session10/: example1.c
session11/: bai-them-mang-1.c  bai-them-mang-2.c  bai-them-mang-3.c  bai-them-mang-4.c  bai-them-mang-5.c  bai-them-mang-6.c  bai-them-mang-7.c  bai-them-mang-8.c  bai-them-mang-9.c  example1.c  example11-3.c  example11_2.c  example11_4.c  example11_5.c  example11_6.c  test-trenlop.c  tryityourself1.c  tryityourself2.c  tryityourself3.c
session12/: addMatrices.c  vidu12_trenlop.c  viduStudentMarks.c
session15/: 15_baitrenlop.c  15_example4.c  15_example7.c  15_viduskype1.c  15_viduskype2.c  15_viduskype3.c  16_atmbasic.c  16_calculateCircle.c  16_calculateFactorial.c  16_calculateGrade.c  16_coffeeShop.c  16_square.c  AreaTriangle.c  ILoveYou.c  calculateRectangle.c  indexMin.c  multiplesOf50.c  performOperation.c  reverseArray.c  simpleCalculator.c
session16/: boiso50.c  findmax.c  finindexMax.c  hinhchunhat.c  tienbanhang.c
session17/: 17_try1cach2.c  17_tryit1.c  17_tryit2.c  longestString.c
session7/: atm-basic.c  atm-ifelse.c  bmi.c  discounted-price.c  example1.cpp  example1.h  example2.c  leapyear.c  lower-to-uppercase.c  switch-case.c  upper-lowercase.c  vidu7-6.c  vidu7-7.c
session8/: case.c  commission.c  commission2.c  exercise1.c  exercise2.c  exercise3.c  greater_number.c  studentScore.c
session9/: 9-2-evennumber.c  9-3.c  atm2.c  averageScore.c  chiahet-cho9.c  coffeeShop.c  luckynumber.c  orderdrink.c  some-loopdemos.c  vidu-break.c  vidu-dowhile.c  vidu-while-loop-2.c  vidu9-2.c
