cmake_minimum_required(VERSION 3.27)
project(learnc C)

set(CMAKE_C_STANDARD 11)

add_executable(learnc main.c
        chap01/ex01.cpp
        chap01/ex01.h
        chap01/ex02.cpp
        chap01/ex02.h
        chap01/ex03.cpp
        chap01/ex03.h
        chap01/demo_datatype.cpp
        chap01/demo_datatype.h
        chap01/salary.cpp
        chap01/salary.h
        chap01/tinhtuoi.cpp
        chap01/tinhtuoi.h
        chap01/demo_sizeof.cpp
        chap01/demo_sizeof.h
        session7/upper-lowercase.c
        session7/discounted-price.c
        session7/switch-case.c
        session7/vidu7-6.c
        session7/vidu7-7.c
        session7/example2.c
        session7/lower-to-uppercase.c
        session7/atm-basic.c
        session7/atm-ifelse.c
        session7/bmi.c
        session8/commission.c
        session8/greater_number.c
        session8/commission2.c
        session8/case.c
        session8/studentScore.c
        session8/exercise1.c
        session8/exercise2.c
        session9/vidu9-2.c
        session9/vidu9-2.c
        session9/9-2-evennumber.c
        session9/9-3.c
        session9/orderdrink.c
        lab04/bai1.c
        lab04/bai2.c
        lab04/bai3.c
        lab04/bai4.c
        lab04/bai5.c
        lab04/bai6.c
        lab04/bai7.c
        session9/vidu-while-loop-2.c
        session9/vidu-dowhile.c
        session9/vidu-break.c
        session9/chiahet-cho9.c
        session9/atm2.c
        session9/some-loopdemos.c
        session9/coffeeShop.c
        session9/luckynumber.c
        session9/averageScore.c
        session11/example1.c
        lab05/bai1.c
        lab05/bai2.c
        lab05/bai3.c
        lab05/bai4.c
        lab05/bai5.c
        lab05/bai6.c
        lab05/bai6-chua.c
        session11/example11_2.c
        session11/example11-3.c
        session11/example11_4.c
        session11/example11_5.c
        session11/example11_6.c
        session11/tryityourself3.c
        session11/test-trenlop.c
        session11/tryityourself1.c
        session11/tryityourself2.c
        session11/bai-them-mang-1.c
        session11/bai-them-mang-2.c
        session11/bai-them-mang-3.c
        session12/viduStudentMarks.c
        session12/addMatrices.c
        session11/bai-them-mang-4.c
        session11/bai-them-mang-5.c
        session11/bai-them-mang-6.c
        session11/bai-them-mang-7.c
        session11/bai-them-mang-8.c
        session12/vidu12_trenlop.c
        session11/bai-them-mang-9.c
)
